--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
+  <script src="https://kit.fontawesome.com/df13685a5e.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/2bd00a2c82.js" crossorigin="anonymous"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
